# OS_Lab-1_2322626

./: README.md
MyCCodes/: CMakeLists.txt  Makefile  Program_1_1.c  Program_1_10.c  Program_1_2.c  Program_1_3.c  Program_1_4.c  Program_1_5.c  Program_1_6_and_1_7.c  Program_1_8.c  Program_1_9.c  Program_2.c
MyCCodes/executables/: 1_10_OctalDecimalHexadecimal  1_1_LeapYear  1_2_Factorial  1_3_Power  1_4_EvenOrOdd  1_5_Fibonacci  1_6_and_1_7_UpperOrLowerCase  1_8_LargestOf3  1_9_TypeCasting  2_ClassGrades
MyCppCodes/Program_3/: CMakeLists.txt  Exe_Program_3  Makefile  main.cpp
MyCppCodes/Program_4/: CMakeLists.txt  Exe_Program_4  Figure.cpp  Figure.h  Makefile  Rectangle.cpp  Rectangle.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  main.cpp
